--- a/style.css
+++ b/style.css
@@ -37,10 +37,10 @@
 }
 
 .center-div{
+  width: auto;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 50px;
+  justify-content: space-around;
 }
 
 .btn-header{
@@ -98,11 +98,6 @@
   display: flex;
 }
 
-.icon-infuser > .active-infos {
-  transform: rotate(-40);
-
-}
-
 .girar {
   transition: 0.1s;
   rotate: -180deg;
@@ -120,21 +115,23 @@ section{
 
 .container-cursos{
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: left;
   flex-direction: row;
   gap: 10px;
+  padding: 5%;
   background-color: #c4c4c4;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   flex-wrap: wrap;
 }
 
 .box-curso{
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
+  padding: 20px;
   width: 150px;
   height: 200px;
   background-color: #d9d9d9;
@@ -142,4 +139,20 @@ section{
 
 .img-curso{
   width: 100px;
+}
+
+@media (max-width: 568px){
+  .center-div{
+    display: none;
+  }
+  .container-cursos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .box-curso{
+    width: 80%;
+    height: 50%;
+  }
+
 }
